--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
 
         <div class="qr-box">
 
+            <div class="q-box-img">
+                <img src="img/image-qr-code.png" alt="Qr Code Image">
+            </div>
+
+            <div class="q-box-info">
+                
+                <h3>
+                    Improve your front-end skills by building projcts
+                </h3>
+
+                <p>
+                    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+                </p>
+
+            </div>
+
         </div>
 
     </main>
